<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/email_help" />

    <TextView
        android:id="@+id/enter_email"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:text="@string/enter_email" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/enter_email"
        android:hint="@string/hint2"
        />
	  <CheckBox
        android:id="@+id/start_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/done_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_id"
        android:layout_below="@+id/start_id"
        android:onClick="onDone"
        android:layout_marginTop="14dp"
        android:text="@string/done" />

    <TextView
        android:id="@+id/address_request"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/done_id"
        android:layout_marginTop="22dp"
        android:text="@string/get_address" />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/address_request"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/address" />

    <Button
        android:id="@+id/accept_address"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:onClick="onSetAddress"
        android:text="@string/set_address" />
    
</RelativeLayout>